[package]
name = "space_race"
version = "0.1.0"
edition = "2021"

publish = false

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking", "file_watcher"]}
# bevy = { version = "0.13.0" }
# bevy-parallax = "0.8.0"
bevy_screen_diagnostics = "0.5.0"
rand = "0.8.5"